--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Layout Example</title>
+    <title>My Homepage</title>
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     <aside class="secondary-content">
         <img class="my-image" src="resources/WIN_20240831_23_40_09_Pro.jpg" alt="My Image">
         <h3>About me</h3>
-        <p>Hello My name is Pujira Younglier currently studying at Thammasat University in the Faculty of Computer Science I'm 19 years old and graduated from Benjamarachutit School. I'm interested in programming, which is why I chose to study here. My hobbies are listening to music and playing games. I've just recently started learning how to program, but I'm determined to keep studying and improving</p>
+        <p>Hello My name is Pujira Younglier currently studying at Thammasat University in the Faculty of Computer Science I'm 19 years old and graduated from Benjamarachutit Chanthaburi School. I'm interested in programming, which is why I chose to study here. My hobbies are listening to music and playing games. I've just recently started learning how to program, but I'm determined to keep studying and improving</p>
         <video class="my-video" src="resources/WIN_20240901_15_21_35_Pro.mp4" controls></video>
         <h3>Introduction video</h3>
         <p>I'm just starting to study English, so I apologize for my poor accent I think learning English is essential for studying programming, so I've started learning it. English is important and can be useful for future opportunities.</p>
